[package]
name = "rnx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path="src/main.rs"
name="rnx"

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
uuid = { version = "1.4.0", features = ["v4"] }
